cli/tests/snapshot/inputs/errors/query_non_record.ncl
# capture = 'stderr'
# command = [ 'query', '--field', 'value' ]
1
